--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -36,8 +36,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def alfa_de_crombach(preguntas, puntajes):\n",
-    "    N = preguntas.shape[0]\n",
+    "def alfa_de_crombach(preguntas):\n",
+    "    N = preguntas.shape[0] # Total de preguntas\n",
+    "    preguntas = preguntas.fillna(0) # Reemplazar los valores nulos con 0\n",
+    "    puntajes = preguntas.sum(axis=1) # Correctas por pregunta\n",
     "    varianzas_preguntas = preguntas.var(axis=0)\n",
     "    varianza_puntaje = puntajes.var(axis=0)\n",
     "    varianza_total = varianzas_preguntas.sum(axis=0)\n",
@@ -46,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "d9152441",
    "metadata": {},
    "outputs": [],
@@ -445,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "143ddbe3",
    "metadata": {},
    "outputs": [
@@ -677,7 +679,7 @@
        "max      1.000000    1.000000         12.0   12.000000  100.000000  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "0f057b6a",
    "metadata": {},
    "outputs": [],
@@ -715,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "a2e471bc",
    "metadata": {},
    "outputs": [
@@ -1685,7 +1687,7 @@
        "[30 rows x 30 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1696,7 +1698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "0f42b09c",
    "metadata": {},
    "outputs": [
@@ -1727,7 +1729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "a0ec792a",
    "metadata": {},
    "outputs": [
@@ -2135,7 +2137,7 @@
        "Nota         0.439891          NaN  1.000000  1.000000  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2146,7 +2148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "5c6f7edc",
    "metadata": {},
    "outputs": [
@@ -2185,7 +2187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "cc92b360",
    "metadata": {},
    "outputs": [
@@ -2291,7 +2293,7 @@
        "Discriminación    0.661654    0.669173  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2310,23 +2312,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "b5a2b79e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6542845520094771"
+       "0.6375226940630183"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "alfa_de_crombach(data_2023_1[['P' + str(i) for i in range(1, 13)]], data_2023_1['Puntaje'])"
+    "alfa_de_crombach(data_2023_1[['P' + str(i) for i in range(1, 13)]])"
    ]
   },
   {
@@ -2339,23 +2341,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "451f1152",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6855848274911994"
+       "0.6511335163653996"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "alfa_de_crombach(data_2023_1[['P' + str(i) for i in [2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]]], data_2023_1['Puntaje'])"
+    "alfa_de_crombach(data_2023_1[['P' + str(i) for i in [2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]]])"
    ]
   },
   {
@@ -2368,23 +2370,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "914fe5aa",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6837217111980582"
+       "0.6121887220147166"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "alfa_de_crombach(data_2023_1[['P' + str(i) for i in [1, 2, 3, 5, 6, 7, 8, 9, 10, 11, 12]]], data_2023_1['Puntaje'])"
+    "alfa_de_crombach(data_2023_1[['P' + str(i) for i in [1, 2, 3, 5, 6, 7, 8, 9, 10, 11, 12]]])"
    ]
   },
   {
@@ -2397,7 +2399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "b7e0f91e",
    "metadata": {
     "scrolled": true
@@ -2406,16 +2408,16 @@
     {
      "data": {
       "text/plain": [
-       "0.6706642393595253"
+       "0.6147067046700585"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "alfa_de_crombach(data_2023_1[['P' + str(i) for i in [1, 2, 3, 4, 5, 6, 8, 9, 10, 11, 12]]], data_2023_1['Puntaje'])"
+    "alfa_de_crombach(data_2023_1[['P' + str(i) for i in [1, 2, 3, 4, 5, 6, 8, 9, 10, 11, 12]]])"
    ]
   },
   {
@@ -2428,7 +2430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "78d1cd46",
    "metadata": {},
    "outputs": [
@@ -2534,7 +2536,7 @@
        "Discriminación    0.516260    0.556911  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2545,23 +2547,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "id": "39cb7fe5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.596060345666806"
+       "0.592279564277643"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "alfa_de_crombach(data_2023_2[['P' + str(i) for i in range(1, 13)]], data_2023_2['Puntaje'])"
+    "alfa_de_crombach(data_2023_2[['P' + str(i) for i in range(1, 13)]])"
    ]
   }
  ],
